5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1582_579.log
== TEST (2019-03-30 17:29:55) 
-- CODE:
print ("A UFAM tem", 2019 - 1909, !anos de fundação."")
-- ERROR:
File "XXXX", line 1
    print ("A UFAM tem", 2019 - 1909, !anos de fundação."")
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:30:07) 
-- CODE:
print ("A UFAM tem", 2019 - 1909, !anos de fundação.)
-- ERROR:
File "XXXX", line 1
    print ("A UFAM tem", 2019 - 1909, !anos de fundação.)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:30:41) 
-- CODE:
print ("A UFAM tem", 2019 - 1909, "anos de fundação.")
-- OUTPUT:
A UFAM tem 110 anos de fundação.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:30:58) 
-- CODE:
print ("A UFAM tem", 2019 - 1909, "anos de fundação.")
-- EXECUTION TIME:
0.169407
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/579/main.py", line 1, in <module>
    print ("A UFAM tem", 2019 - 1909, "anos de funda\xe7\xe3o.")
UnicodeEncodeError: 'ascii' codec can't encode characters in position 13-14: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:31:12) 
-- CODE:
print ("A UFAM tem", 2016 - 1909, "anos de fundação.")
-- OUTPUT:
A UFAM tem 107 anos de fundação.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:31:59) 
-- CODE:
print ("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:32:14) 
-- CODE:
print ("A UFAM tem", 2019 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:32:37) 
-- CODE:
print ("A UFAM tem", 2019 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.175291
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 17:32:42) 
-- CODE:
print ("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 17:32:46) 
-- CODE:
print ("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.152546
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
